Avances en el proyecto evolutivo

--- a/hola-mundo/hola-mundo/src/styles/task.scss
+++ b/hola-mundo/hola-mundo/src/styles/task.scss
@@ -1,9 +1,3 @@
-h5 {
-    color: magenta;
-}
-
-
-.task-name {
-    font-weight: bold;
-    color: cadetblue;
+.task-action {
+    cursor:pointer
 }
